--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
     "@mui/styled-engine-sc": "^6.4.0",
+    "@mui/x-charts": "^7.23.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "sass": "^1.83.1",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "twilio": "^5.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
